--- a/config/default/facets_summary.facets_summary.facet_summary.yml
+++ b/config/default/facets_summary.facets_summary.facet_summary.yml
@@ -80,3 +80,9 @@ facets:
     separator: ', '
     show_count: false
     weight: 0
+  related_season_facet:
+    checked: true
+    label: 'Related Season'
+    separator: ', '
+    show_count: false
+    weight: 0
