--- a/config/default/core.entity_view_display.user.user.compact.yml
+++ b/config/default/core.entity_view_display.user.user.compact.yml
@@ -19,8 +19,39 @@ dependencies:
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
+    - ds
     - image
     - user
+third_party_settings:
+  ds:
+    layout:
+      id: bs_1col
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        label: ''
+        layout:
+          wrapper: div
+          classes:
+            row: row
+          add_layout_class: 1
+          attributes: ''
+        regions:
+          main:
+            wrapper: div
+            classes:
+              col-sm-12: col-sm-12
+            add_region_classes: 1
+            attributes: ''
+    regions:
+      main:
+        - user_picture
+        - field_name_first_last
+        - field_occupation
+        - field_institution_name
+        - field_institution
+        - masquerade
 _core:
   default_config_hash: U_qc8Fxwi4HitQJUZMvnMEcIOU9JMi_iitrswuOn8ys
 id: user.user.compact
@@ -28,19 +59,71 @@ targetEntityType: user
 bundle: user
 mode: compact
 content:
+  field_institution:
+    type: entity_reference_label
+    label: inline
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 4
+    region: main
+  field_institution_name:
+    type: string
+    label: inline
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 3
+    region: main
   field_name_first_last:
     type: string
     label: hidden
     settings:
+      link_to_entity: true
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            lbw: false
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            lb-col: false
+            ow: false
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            ow-def-at: false
+            ow-def-cl: false
+            fis: true
+            fis-el: strong
+            fis-cl: ''
+            fis-at: ''
+            fis-def-at: false
+            fi: false
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            fi-def-at: false
+            prefix: ''
+            suffix: ''
+    weight: 1
+    region: main
+  field_occupation:
+    type: string
+    label: inline
+    settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 1
-    region: content
+    weight: 2
+    region: main
   masquerade:
     settings: {  }
     third_party_settings: {  }
-    weight: 2
-    region: content
+    weight: 5
+    region: main
   user_picture:
     type: image
     label: hidden
@@ -51,15 +134,12 @@ content:
         attribute: lazy
     third_party_settings: {  }
     weight: 0
-    region: content
+    region: main
 hidden:
   field_address: true
   field_created_by: true
   field_fax: true
-  field_institution: true
-  field_institution_name: true
   field_last_password_reset: true
-  field_occupation: true
   field_password_expiration: true
   field_pending_expire_sent: true
   field_phone: true
