--- a/config/default/devel.toolbar.settings.yml
+++ b/config/default/devel.toolbar.settings.yml
@@ -4,8 +4,7 @@ toolbar_items:
   - devel.configs_list
   - devel.container_info.service
   - devel.admin_settings_link
-  - devel.elements_page
   - devel.entity_info_page
-  - devel.field_info_page
   - devel.menu_rebuild
   - devel.reinstall
+  - devel.switch_user
