--- a/config/default/search_api.index.content.yml
+++ b/config/default/search_api.index.content.yml
@@ -3,41 +3,42 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_abstract
     - field.storage.node.field_acquired_from
-    - field.storage.taxonomy_term.field_associated_instituation
-    - field.storage.node.field_audio_video
     - field.storage.node.field_collection
-    - field.storage.node.field_contributor_collector
+    - field.storage.node.field_provenance
+    - field.storage.node.field_sources_exhib_pub_his
     - field.storage.node.field_current_institution
-    - field.storage.node.field_description_motifs
-    - field.storage.node.field_description_source
-    - field.storage.node.field_description_summary
-    - field.storage.node.field_description_techniques
-    - field.storage.node.field_exhibition_notes
     - field.storage.node.field_filter_date_made
+    - field.storage.node.field_term_definition
+    - field.storage.node.field_abstract
+    - field.storage.node.field_exhibition_notes
     - field.storage.node.field_folders
-    - field.storage.node.field_function_attribution
-    - field.storage.taxonomy_term.field_initials
+    - field.storage.node.field_description_techniques
+    - field.storage.node.field_description_summary
     - field.storage.node.field_item_type
     - field.storage.node.field_languages
-    - field.storage.node.field_local_origin_attribution
     - field.storage.node.field_local_origin_tid
-    - field.storage.node.field_maker_attribution
+    - field.storage.node.field_local_origin_attribution
+    - field.storage.node.field_description_motifs
     - field.storage.node.field_maker_name
-    - field.storage.node.field_nation_rationale
     - field.storage.node.field_nation_tid
+    - field.storage.node.field_nation_rationale
+    - field.storage.node.field_contributor_collector
     - field.storage.node.field_part_of_speech
-    - field.storage.node.field_provenance
     - field.storage.node.field_publication_history
     - field.storage.node.field_region_of_origin
+    - field.storage.node.field_audio_video
     - field.storage.node.field_related_places
-    - field.storage.node.field_sources_exhib_pub_his
-    - field.storage.node.field_term_definition
+    - field.storage.node.field_related_seasonal_time
+    - field.storage.node.field_description_source
+    - field.storage.node.field_function_attribution
+    - field.storage.node.field_maker_attribution
+    - field.storage.taxonomy_term.field_associated_instituation
+    - field.storage.taxonomy_term.field_initials
     - search_api.server.database_server
   module:
-    - taxonomy
     - node
+    - taxonomy
     - search_api
 id: content
 name: Content
@@ -335,6 +336,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_related_places
+  field_related_seasonal_time:
+    label: 'Related Seasonal Time'
+    datasource_id: 'entity:node'
+    property_path: field_related_seasonal_time
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_related_seasonal_time
   field_sources_exhib_pub_his:
     label: 'Comment on Source of Exhibition & Publication Data'
     datasource_id: 'entity:node'
