--- a/config/default/user.role.content_admin.yml
+++ b/config/default/user.role.content_admin.yml
@@ -56,6 +56,7 @@ dependencies:
     - dropzonejs
     - entity_browser
     - entityqueue
+    - field_permissions
     - file
     - filter
     - layout_builder
@@ -142,6 +143,7 @@ permissions:
   - 'create content translations'
   - 'create document media'
   - 'create faq content'
+  - 'create field_record_editable_by'
   - 'create file media'
   - 'create gallery media'
   - 'create heritage_item content'
@@ -271,6 +273,7 @@ permissions:
   - 'edit own article content'
   - 'edit own audio media'
   - 'edit own document media'
+  - 'edit own field_record_editable_by'
   - 'edit own file media'
   - 'edit own gallery media'
   - 'edit own heritage_item content'
@@ -369,6 +372,7 @@ permissions:
   - 'view article revisions'
   - 'view content planner dashboard'
   - 'view faq revisions'
+  - 'view field_record_editable_by'
   - 'view heritage_item revisions'
   - 'view landing_page_lb revisions'
   - 'view language_item revisions'
