--- a/config/default/user.role.full_member.yml
+++ b/config/default/user.role.full_member.yml
@@ -36,6 +36,7 @@ permissions:
   - 'change own username'
   - 'create article content'
   - 'create field_make_role'
+  - 'create field_record_editable_by'
   - 'create files'
   - 'create heritage_item content'
   - 'create language_item content'
@@ -76,6 +77,7 @@ permissions:
   - 'edit own comments'
   - 'edit own document files'
   - 'edit own field_make_role'
+  - 'edit own field_record_editable_by'
   - 'edit own heritage_item content'
   - 'edit own image files'
   - 'edit own language_item content'
@@ -127,6 +129,7 @@ permissions:
   - 'view expiring users report'
   - 'view field_gks_id'
   - 'view field_make_role'
+  - 'view field_record_editable_by'
   - 'view files'
   - 'view icons'
   - 'view own field_make_role'
