--- a/config/default/user.role.manager.yml
+++ b/config/default/user.role.manager.yml
@@ -52,6 +52,7 @@ permissions:
   - 'change own username'
   - 'create article content'
   - 'create field_make_role'
+  - 'create field_record_editable_by'
   - 'create files'
   - 'create heritage_item content'
   - 'create language_item content'
@@ -118,6 +119,7 @@ permissions:
   - 'edit any language_item content'
   - 'edit any page content'
   - 'edit any video files'
+  - 'edit field_record_editable_by'
   - 'edit own article content'
   - 'edit own audio files'
   - 'edit own comments'
@@ -172,6 +174,7 @@ permissions:
   - 'use text format full_html'
   - 'view expiring users report'
   - 'view field_gks_id'
+  - 'view field_record_editable_by'
   - 'view files'
   - 'view icons'
   - 'view own field_gks_id'
