--- a/config/default/user.role.site_admin.yml
+++ b/config/default/user.role.site_admin.yml
@@ -70,6 +70,7 @@ dependencies:
     - entity_browser
     - entity_usage
     - entityqueue
+    - field_permissions
     - file
     - filter
     - flood_control
@@ -221,6 +222,7 @@ permissions:
   - 'create content translations'
   - 'create document media'
   - 'create faq content'
+  - 'create field_record_editable_by'
   - 'create file media'
   - 'create gallery media'
   - 'create heritage_item content'
@@ -350,9 +352,11 @@ permissions:
   - 'edit any varbase_heroslider_media content'
   - 'edit any video media'
   - 'edit any webform'
+  - 'edit field_record_editable_by'
   - 'edit own article content'
   - 'edit own audio media'
   - 'edit own document media'
+  - 'edit own field_record_editable_by'
   - 'edit own file media'
   - 'edit own gallery media'
   - 'edit own heritage_item content'
@@ -476,6 +480,7 @@ permissions:
   - 'view content planner dashboard'
   - 'view faq page'
   - 'view faq revisions'
+  - 'view field_record_editable_by'
   - 'view heritage_item revisions'
   - 'view landing_page_lb revisions'
   - 'view language_item revisions'
