--- a/config/default/core.entity_form_display.node.language_item.default.yml
+++ b/config/default/core.entity_form_display.node.language_item.default.yml
@@ -21,10 +21,32 @@ dependencies:
     - workflows.workflow.varbase_simple_workflow
   module:
     - content_moderation
+    - field_group
     - length_indicator
     - media_library
     - path
+    - scheduler
     - text
+third_party_settings:
+  field_group:
+    group_about_this_lang_record:
+      children:
+        - field_unique_id
+        - field_date_created
+        - field_folders
+        - field_record_editable_by
+      label: 'About this record'
+      region: content
+      parent_name: ''
+      weight: 21
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: true
+        id: edit_tab_about_lang_record
+        formatter: closed
+        description: ''
+        required_fields: false
 id: node.language_item.default
 targetEntityType: node
 bundle: language_item
@@ -48,7 +70,7 @@ content:
     third_party_settings: {  }
   field_alternative_spellings:
     type: string_textarea
-    weight: 17
+    weight: 14
     region: content
     settings:
       rows: 5
@@ -56,38 +78,34 @@ content:
     third_party_settings: {  }
   field_audio_video:
     type: media_library_widget
-    weight: 27
+    weight: 20
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_date_created:
     type: string_textfield
-    weight: 20
+    weight: 22
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   field_folders:
-    type: entity_reference_autocomplete
-    weight: 26
+    type: options_buttons
+    weight: 23
     region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
   field_languages:
     type: options_select
-    weight: 14
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   field_part_of_speech:
     type: string_textfield
-    weight: 15
+    weight: 12
     region: content
     settings:
       size: 60
@@ -95,7 +113,7 @@ content:
     third_party_settings: {  }
   field_record_editable_by:
     type: entity_reference_autocomplete
-    weight: 25
+    weight: 24
     region: content
     settings:
       match_operator: CONTAINS
@@ -105,7 +123,7 @@ content:
     third_party_settings: {  }
   field_related_heritage_item:
     type: entity_reference_autocomplete
-    weight: 21
+    weight: 17
     region: content
     settings:
       match_operator: CONTAINS
@@ -115,7 +133,7 @@ content:
     third_party_settings: {  }
   field_related_language_item:
     type: entity_reference_autocomplete
-    weight: 22
+    weight: 18
     region: content
     settings:
       match_operator: CONTAINS
@@ -125,7 +143,7 @@ content:
     third_party_settings: {  }
   field_related_places:
     type: entity_reference_autocomplete
-    weight: 23
+    weight: 19
     region: content
     settings:
       match_operator: CONTAINS
@@ -134,18 +152,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_source:
-    type: entity_reference_autocomplete
-    weight: 18
+    type: options_select
+    weight: 15
     region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
   field_term_definition:
     type: string_textarea
-    weight: 16
+    weight: 13
     region: content
     settings:
       rows: 5
@@ -153,7 +167,7 @@ content:
     third_party_settings: {  }
   field_unique_id:
     type: string_textfield
-    weight: 24
+    weight: 21
     region: content
     settings:
       size: 60
@@ -168,13 +182,25 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 12
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
     weight: 6
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  publish_on:
+    type: datetime_timestamp_no_default
+    weight: 22
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  publish_state:
+    type: options_select
+    weight: 23
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -185,7 +211,7 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 13
+    weight: 10
     region: content
     settings:
       display_label: true
@@ -205,7 +231,7 @@ content:
           optimax: 50
           tolerance: 10
   translation:
-    weight: 10
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -220,14 +246,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 11
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   promote: true
-  publish_on: true
-  publish_state: true
   sticky: true
   unpublish_on: true
   unpublish_state: true
