--- a/config/default/user.role.institution_key_contact.yml
+++ b/config/default/user.role.institution_key_contact.yml
@@ -7,6 +7,7 @@ dependencies:
     - filter.format.full_html
     - node.type.article
   module:
+    - field_permissions
     - filter
     - node
 id: institution_key_contact
@@ -39,6 +40,7 @@ permissions:
   - 'use php in custom pagers'
   - 'use text format basic_html'
   - 'use text format full_html'
+  - 'view field_record_editable_by'
   - 'view files'
   - 'view icons'
   - 'view own unpublished content'
