--- a/config/default/user.role.test_role.yml
+++ b/config/default/user.role.test_role.yml
@@ -1,11 +1,19 @@
 uuid: d6e724ff-1b9a-474b-827f-db3f8b76dd27
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  config:
+    - filter.format.full_html
+  module:
+    - field_permissions
+    - filter
 id: test_role
 label: 'Test Role'
 weight: -4
 is_admin: null
 permissions:
+  - 'create field_record_editable_by'
   - 'edit own comments'
+  - 'edit own field_record_editable_by'
+  - 'use text format full_html'
   - 'view icons'
